--- a/site/index.html
+++ b/site/index.html
@@ -7,8 +7,6 @@
     <title>codepuzzle - Ruby on Rails Freelancer - Anton Mikulcic</title>
     <meta content='Anton Mikulcic, Ruby on Rails and Frontend Artist. Hire me for agile software projects :&gt;' name='description' />
     <meta content='Anton Mikulcic' name='author' />
-    <!--  Mobile viewport optimized: j.mp/bplateviewport -->
-    <meta content='width=device-width; initial-scale=1.0' name='viewport' />
     <link href='/favicon.ico' rel='shortcut icon' />
     <link href='/apple-touch-icon.png' rel='apple-touch-icon' />
     <link href='http://fonts.googleapis.com/css?family=OFL+Sorts+Mill+Goudy+TT:regular,italic' rel='stylesheet' type='text/css' />
@@ -41,7 +39,7 @@
           <img alt='Anton Mikulcic' id='portrait' src='anton_mikulcic.jpg' />
           <h1>Hi, my name is Anton Mikulcic</h1>
           <p>I'm a professional software developer from Munich/ Germany and I used to be a Java Geek until I found Ruby on Rails. Yay!</p>
-          <p>Codepuzzle is my freelancer promotion label and stands for a self-imposed dogma of writing efficient and reusable code that <i>fits</i>.</p>
+          <p>Up to now I design and develop web applications. People also like me to implement their UX related stuff like jQuery or experimental CSS.</p>
           <p>
             You can
             <span class='eyecatcher'><script TYPE="text/javascript">/*<![CDATA[*/ document.write('<a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;">');document.write('hire me<span>hire me</span></a>'); /*]]>*/</script></span>
@@ -54,6 +52,14 @@
           </p>
         </div>
         <div class='post' id='imprint'>
+          <p>Codepuzzle is my freelancer promotion label and stands for a self-imposed dogma of writing efficient and reusable code that <i>fits</i>.</p>
+          <p>Here's where you can contact me:</p>
+          <p id='skype'>
+            <script src='http://download.skype.com/share/skypebuttons/js/skypeCheck.js' type='text/javascript'></script>
+            <a href='skype:codepuzzle?call'>
+              <img alt='My Skype status' height='60' src='http://mystatus.skype.com/balloon/codepuzzle' style='border: none;' width='150' />
+            </a>
+          </p>
           <p class='address'>
             <a href='http://www.codepuzzle.de/'>Anton Mikulcic</a>
             <br />
@@ -61,14 +67,14 @@
             <br />
             81543 Munich / Germany
           </p>
-          <p>
-            0151&nbsp;<span style="display: none;">12 34 56 78 90</span>/&nbsp;<span style="display: none;">12 34 56 78 90</span>27&nbsp;<span style="display: none;">12 34 56 78 90</span>03&nbsp;<span style="display: none;">12 34 56 78 90</span>84&nbsp;<span style="display: none;">12 34 56 78 90</span>42
+          <p class='address highlighted'>
+            Phone: +49 151&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>/&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>27&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>03&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>84&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>42
           </p>
-          <p>
+          <p class='address'>
             <script TYPE="text/javascript">/*<![CDATA[*/ document.write('<a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;">');document.write('&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;');document.write('</a>'); /*]]>*/</script>
           </p>
           <p>
-            <a class='continue' href='#home'>
+            <a class='back continue' href='#home'>
               Back
             </a>
           </p>
@@ -87,14 +93,12 @@
       !window.jQuery && document.write('<script src="javascripts/jquery-1.4.2.min.js"><\/script>');
     </script>
     <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js' type='text/javascript'></script>
-    <script src='javascripts/plugins.js?v=1' type='text/javascript'></script>
     <script src='javascripts/script.js?v=1' type='text/javascript'></script>
     <!--[if lt IE 7 ]>
     <script src='javascripts/dd_belatedpng.js?v=1' type='text/javascript'></script>
     <![endif]-->
-    <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet -->
     <script type='text/javascript'>
-      var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
+      var _gaq = [['_setAccount', 'UA-5508260-1'], ['_trackPageview']];
       (function(d, t) {
       var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
       g.async = true;
