--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <!-- www.phpied.com/conditional-comments-block-downloads/ -->
     <!--[if IE]><![endif]-->
     <title>codepuzzle - Ruby on Rails Freelancer - Anton Mikulcic</title>
-    <meta content='Anton Mikulcic, Ruby on Rails and Frontend Artist. Hire me for agile software projects :&gt;' name='description' />
+    <meta content='Anton Mikulcic, Ruby on Rails and Frontend Artist. Hire me for agile software projects.' name='description' />
     <meta content='Anton Mikulcic' name='author' />
     <link href='/favicon.ico' rel='shortcut icon' />
     <link href='/apple-touch-icon.png' rel='apple-touch-icon' />
@@ -13,13 +13,12 @@
     <link href='/stylesheets/boilerplate.css' media='all' rel='stylesheet' type='text/css' />
     <link href='/stylesheets/screen.css' media='all' rel='stylesheet' type='text/css' />
     <script src='javascripts/modernizr-1.5.min.js' type='text/javascript'></script>
+    <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
+    <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
+    <!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
+    <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
+    <!--[if (gt IE 9)|!(IE)]><!-->
   </head>
-  <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-  <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
-  <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
-  <!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
-  <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
-  <!--[if (gt IE 9)|!(IE)]><!-->
   <body>
     <!--<![endif]-->
     <div id='container'>
