--- a/site/index.html
+++ b/site/index.html
@@ -92,6 +92,7 @@
       !window.jQuery && document.write('<script src="javascripts/jquery-1.4.2.min.js"><\/script>');
     </script>
     <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js' type='text/javascript'></script>
+    <script src='javascripts/plugins.js?v=1' type='text/javascript'></script>
     <script src='javascripts/script.js?v=1' type='text/javascript'></script>
     <!--[if lt IE 7 ]>
     <script src='javascripts/dd_belatedpng.js?v=1' type='text/javascript'></script>
