--- a/site/index.html
+++ b/site/index.html
@@ -41,7 +41,7 @@
           <p>Up to now I design and develop web applications. People also like me to implement their UX related stuff like jQuery or experimental CSS.</p>
           <p>
             You can
-            <span class='eyecatcher'><script TYPE="text/javascript">/*<![CDATA[*/ document.write('<a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;">');document.write('hire me<span>hire me</span></a>'); /*]]>*/</script></span>
+            <span class='eyecatcher' id='eyecatcher'></span>
             for outrageous and cutting-edge projects or join my <a href="http://www.xing.com/profile/Anton_Mikulcic" target="_blank">XING</a>-Network.
           </p>
           <p>
@@ -69,11 +69,9 @@
           <p class='address highlighted'>
             Phone: +49 151&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>/&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>27&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>03&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>84&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>42
           </p>
-          <p class='address'>
-            <script TYPE="text/javascript">/*<![CDATA[*/ document.write('<a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;">');document.write('&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;');document.write('</a>'); /*]]>*/</script>
-          </p>
+          <p class='address' id='m'></p>
           <p>
-            <a class='back continue' href='#home'>
+            <a class='back continue' href='#about'>
               Back
             </a>
           </p>
@@ -84,6 +82,7 @@
         <p>&copy; Anton Mikulcic 2010</p>
       </footer>
     </div>
+    <a href="http://github.com/codepuzzle/codepuzzle" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
     <script type='text/javascript'>
       var c=document.getElementById('container');if(navigator.userAgent.toLowerCase().match('chrome')&&c)c.className+=' chrome';
     </script>
@@ -92,7 +91,6 @@
       !window.jQuery && document.write('<script src="javascripts/jquery-1.4.2.min.js"><\/script>');
     </script>
     <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js' type='text/javascript'></script>
-    <script src='javascripts/plugins.js?v=1' type='text/javascript'></script>
     <script src='javascripts/script.js?v=1' type='text/javascript'></script>
     <!--[if lt IE 7 ]>
     <script src='javascripts/dd_belatedpng.js?v=1' type='text/javascript'></script>
